# LLM_linkedin

./: .gitignore  pyproject.toml
input/: Anime.txt  Random.txt  jobs.txt  junior_sofware_engeener
prompts/: JobPrompt_1.md
src/: main.py
